[package]
name = "mathjax_svg"
version = "3.0.0"
edition = "2021"
authors = ["gw31415 <git@amas.dev>"]
license = "Apache-2.0"
description = "Convert mathematical expressions to SVG using Mathjax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
v8 = "0.80.0"
